= 1.16.34 - 2025/04/18 = * Fix - Hide WC Payments quick payments buttons on activity product pages (the booking needs to be added to cart first) * Fix - Apply z-index to Booking Activities' select2 selectboxes only * Dev - Refactor bookacti_log function to use error_log instead of fwrite, and gmdate instead of date * Lib - Update FullCalendar to 6.1.17

--- a/css/global.css
+++ b/css/global.css
@@ -5,7 +5,7 @@
 /* Select2 */
 select.bookacti-select2-no-ajax, select.bookacti-select2-ajax  { transition: none !important; }
 .bookacti-user-selectbox                                       { width: 100%; }
-.select2-dropdown                                              { z-index: 3999999 !important; }
+.bookacti-select2-dropdown                                     { z-index: 3999999 !important; }
 .bookacti-select2-selection.select2-selection--single          { margin: 0; }
 .bookacti-select2-selection.select2-selection--multiple        { height: 66px; overflow-y: auto; resize: both; }
 .bookacti-select2-selection.select2-selection--multiple li     { margin-bottom: 0; line-height: 1.4em; }
